sidebar menu changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/7ee186d268.js" crossorigin="anonymous"></script>
     <title>Reto Quantum Robotics</title>
 </head>
 <body>
@@ -21,6 +22,48 @@
             <h1 class="sidebar__h1">New Rover</h1>
             <div class="subline"></div>
         </div>
+        <div class="middle__container">
+            <div class="sidebar__menu-btn">
+                <a href="www.google.com" class=" sidebar__btn">
+                    <i class="fa-solid fa-house-chimney sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Main</h4>
+                </a>
+            </div>
+            <div class="sidebar__menu-btn">
+                <a href="www.google.com" class="sidebar__btn">
+                    <i class="fa-solid fa-satellite-dish sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Comms</h4>
+                </a>
+            </div>
+            <div class="sidebar__menu-btn">
+                <a href="www.google.com" class="sidebar__btn">
+                    <i class="fa-sharp fa-solid fa-screwdriver-wrench sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Settings</h4>
+                </a>
+            </div>
+            <div class="sidebar__menu-btn">
+                <a href="www.google.com" class="sidebar__btn">
+                    <i class="fa-solid fa-robot sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Autonomous</h4>
+                </a>
+            </div>
+            <div class="sidebar__menu-btn">
+                <a src="www.google.com" class="sidebar__btn">
+                    <i class="fa-solid fa-flask sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Science</h4>
+                </a>
+            </div>
+            <div class="sidebar__menu-btn">
+                <a src="www.google.com" class="sidebar__btn">
+                    <i class="fa-solid fa-hill-rockslide sidebar__icons"></i>
+                    <h4 class="sidebar__h4"> Rocks</h4>
+                </a>
+            </div>
+        </div>
+        <div class="down__container">
+
+        </div>
+
     </div>
     <div class="content">
 
