--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
             </div>
         </div>
         <div class="down__container">
-
+            <div class="upline"></div>
+            <div class="down__container__btn">
+                <i class="fa-solid fa-triangle-exclamation sidebar__icons"></i>
+                <i class="fa-solid fa-power-off sidebar__icons"></i>
+                <i class="fa-solid fa-clock sidebar__icons"></i>
+                <i class="fa-solid fa-bell sidebar__icons"></i>
+                <i class="fa-solid fa-signal sidebar__icons"></i>
+            </div>
         </div>
 
     </div>
