content section added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a src="www.google.com" class="sidebar__btn">
+                <a url="www.google.com" class="sidebar__btn">
                     <i class="fa-solid fa-hill-rockslide sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Rocks</h4>
                 </a>
@@ -73,7 +73,16 @@
 
     </div>
     <div class="content">
-
+        <div class="content__container">
+            <div class="search__container">
+                <select name="" id="type-searching" class="type-searching__input" onchange="">
+                    <option value="none">Type</option>
+                    <option value="ignous">Ignous</option>
+                    <option value="sedimentary">Sedimentary</option>
+                    <option value="metamorphic">Metamorphic</option>
+                </select>
+            </div>
+        </div>
     </div>
 </body>
 </html>
