--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="content">
         <div class="content__container">
             <div class="search__container">
-                <select name="" id="type-searching" class="type-searching__input" onchange="">
+                <select name="" id="type-searching" class="type-searching__input" onchange="searching()">
                     <option value="none">Type</option>
                     <option value="ignous">Ignous</option>
                     <option value="sedimentary">Sedimentary</option>
@@ -84,5 +84,6 @@
             </div>
         </div>
     </div>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
