searching funcction added on index.js

--- a/index.html
+++ b/index.html
@@ -24,37 +24,37 @@
         </div>
         <div class="middle__container">
             <div class="sidebar__menu-btn">
-                <a href="www.google.com" class=" sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class=" sidebar__btn">
                     <i class="fa-solid fa-house-chimney sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Main</h4>
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a href="www.google.com" class="sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class="sidebar__btn">
                     <i class="fa-solid fa-satellite-dish sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Comms</h4>
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a href="www.google.com" class="sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class="sidebar__btn">
                     <i class="fa-sharp fa-solid fa-screwdriver-wrench sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Settings</h4>
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a href="www.google.com" class="sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class="sidebar__btn">
                     <i class="fa-solid fa-robot sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Autonomous</h4>
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a src="www.google.com" class="sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class="sidebar__btn">
                     <i class="fa-solid fa-flask sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Science</h4>
                 </a>
             </div>
             <div class="sidebar__menu-btn">
-                <a url="www.google.com" class="sidebar__btn">
+                <a href="https://www.google.com" target="_blank" class="sidebar__btn">
                     <i class="fa-solid fa-hill-rockslide sidebar__icons"></i>
                     <h4 class="sidebar__h4"> Rocks</h4>
                 </a>
@@ -81,6 +81,10 @@
                     <option value="sedimentary">Sedimentary</option>
                     <option value="metamorphic">Metamorphic</option>
                 </select>
+            </div>
+            <div class="rocks__container">
+                <img src="" id="rock-img" alt="">
+                <label for="" id="rock-name"></label>
             </div>
         </div>
     </div>
