--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 </select>
             </div>
             <div class="rocks__container">
-                <img src="" id="rock-img" alt="">
-                <label for="" id="rock-name"></label>
+                <div class="rockss">
+                </div>
             </div>
         </div>
     </div>
